// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > accessRequest > getAccessRequest > 200 > ok 1`] = `
{
  "accessRequest": {
    "example": "test",
  },
}
`;

exports[`routes > accessRequest > getAccessRequest > latest > 200 > ok 1`] = `
{
  "accessRequest": {
    "example": "test",
  },
}
`;

exports[`routes > model > getModel > latest > 200 > ok 1`] = `
{
  "modelCard": {
    "example": "test",
  },
}
`;

exports[`routes > model > getModel > version > 200 > ok 1`] = `
{
  "modelCard": {
    "_id": "test",
  },
}
`;
